2014-02-16 Updated docs, misc. cosmetical changes.
2014-02-15 Added tests/sys.c program for testing crt0 functions.
2014-02-15 Fixed %p in *printf functions (wrong result for values < INT_MIN).
2014-02-14 Wrote simple crt0 test suite.
2014-02-14 Added fcntl.h include file, added SEEK_* constants to unistd.h.
2014-02-13 Removed libc dependencies from freebsd-armv6 crt0.
2014-02-12 Removed libc dependencies from freebsd-386 crt0.
2014-02-12 Re-organized targets/ directory, adapted configure script.
2014-02-12 Fix: Linux/386 does in fact need the system libc.
2014-02-07 Added FreeBSD/armv6 crt0 (crt0-freebsd-armv6.s).
2014-02-06 Added FreeBSD/armv6 back-end (cgarmv6.c).
2014-02-05 Added alignment option to galloc() for CPUs with aligned access.
2014-02-03 Fix: wait_bye should not be visible at C level in Darwin crt0.
2014-02-03 Added version info (-V option).
2014-02-02 Renamed cerror() due to libc conflict (FreeBSD 10.0-RC5). wtf?!
2014-01-19 Updated configure script.
2014-01-19 Removed old, stack-based back-end.
2014-01-15 Fixed alignment of environ and __progname in x86-64 crt0's.
2014-01-15 Added experimental support for Darwin/x86-64. Thanks, Romain LWPB!
2014-01-15 Made CG emit ".comm" instead of ".lcomm/.globl" for globals.
2014-01-14 Added OpenBSD/386 crt0 module (crt0-openbsd-386.s). Thanks, Romain!
2014-01-05 Removed superfluous system libc from linux sys.h.
2013-09-25 Fixed missing error messge in linker invocation.
2013-08-29 Added BUILD.BAT script for Windows by Jean-Marc Lienher. Thanks!
2013-05-24 Fixed a potential bug in the SYN/386 generator. Thanks, JM Lienher!
2013-05-21 Cleaned up the Windows code a bit (purely stylistic).
2013-05-18 Updated README, described Windows/MinGW port.
2013-05-18 Added FreeBSD voodoo section to 386 port. Thanks, Bakul Shah!
2013-05-17 Added Windows/386 support supplied by Jean-Marc Lienher. Thanks!
2013-02-28 Fix: fread() returned wrong length for partially filled buffers.