@@ -1,5 +1,5 @@
 
-	SubC Compiler, Version 2014-02-16
+	SubC Compiler, Version 2014-02-17
 	By Nils M Holm, 2011--2014
 	Placed in the public domain
 
