@@ -1,0 +1,9 @@
+	.data
+
+	public	foo
+	public	bar
+	public	baz
+foo:	db	0 dup 20
+bar:	db	0 dup 30
+baz	dw	0
+
